Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90799

Select handles Left- and RightPoint goes to the wrong place when double tapping on a word on the widget dialog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15, 6.0, 6.1, 6.2
    • 5.15.2
    • QPA
    • Android

      underlined textFor instance if QLineEdit is placed inside QDialog, the Left- and RightPoint select handles are wrong place.

      found during investigation of:
      https://bugreports.qt.io/browse/QTBUG-71900

        1. WrongPlace.png
          WrongPlace.png
          119 kB
        2. withFix.png
          withFix.png
          119 kB
        3. dragIssue.mp4
          1.87 MB
        4. drag.mp4
          2.96 MB
        5. dragOnDialogWithoutMoveofX.mp4
          2.71 MB
        6. FixOnDev.mp4
          9.24 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pekkagehor Pekka Gehör
            pekkagehor Pekka Gehör
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: